<resources>
    <string name="app_name">Todo List App</string>
    <string name="todo_title">Todo title</string>
    <string name="todo_sub_title">Todo sub title</string>
    <string name="todo">TODO</string>
    <string name="add_task">Add Task</string>
    <string name="title">Title</string>
    <string name="detail">Detail</string>
    <string name="add">Add</string>
    <string name="edit_task">Edit Task</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="completed_task">Completed Task</string>
    <string name="no_tasks">No Tasks!</string>
    <string name="no_completed_tasks">No Completed Tasks!</string>
</resources>