<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/custom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:orientation="horizontal"
        android:minHeight="?actionBarSize"
        android:background="@color/brand_color"
        android:padding="12dp">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:background="@drawable/ripple_icon"
            android:src="@drawable/ic_back"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginStart="16dp"
            android:text="@string/add_task"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:fontFamily="@font/jost"
            android:textStyle="bold"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="16dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/hint_color"
                android:hint="@string/title"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/hint_color"
                android:fontFamily="@font/jost"/>

            <EditText
                android:id="@+id/et_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/hint_color"
                android:hint="@string/detail"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/hint_color"
                android:fontFamily="@font/jost"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button"
                android:text="@string/add"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:fontFamily="@font/jost"
                android:textStyle="bold"
                android:layout_marginTop="42dp"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>