<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brand_color_2"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/custom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:orientation="horizontal"
        android:minHeight="?actionBarSize"
        android:background="@color/brand_color"
        android:padding="12dp">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:background="@drawable/ripple_icon"
            android:src="@drawable/ic_back"
            android:contentDescription="@string/todo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginStart="16dp"
            android:text="@string/completed_task"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:fontFamily="@font/jost"
            android:textStyle="bold"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_no_completed_tasks"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal"
        android:text="@string/no_completed_tasks"
        android:textSize="32sp"
        android:gravity="center"
        android:textStyle="bold"
        android:visibility="gone"
        android:textColor="@color/hint_color"
        android:fontFamily="@font/jost"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="gone"
        tools:listitem="@layout/item_completed_task"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

</LinearLayout>