<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/brand_color_2"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/custom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:orientation="horizontal"
        android:minHeight="?actionBarSize"
        android:background="@color/brand_color"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="16dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:fontFamily="@font/jost"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/btn_completed"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/ripple_icon"
            android:src="@drawable/ic_completed"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_no_tasks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_tasks"
        android:textSize="32sp"
        android:gravity="center"
        android:textStyle="bold"
        android:visibility="gone"
        android:textColor="@color/hint_color"
        android:fontFamily="@font/jost"
        app:layout_constraintTop_toBottomOf="@id/custom_toolbar"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        tools:listitem="@layout/item_task"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/custom_toolbar"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/brand_color"
        android:fitsSystemWindows="true"
        android:src="@drawable/ic_add"
        app:backgroundTint="@color/brand_color"
        app:elevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/white"
        android:contentDescription="@string/todo" />

</androidx.constraintlayout.widget.ConstraintLayout>